2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (main):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_get_property),
	(phonemgr_listener_set_property), (phonemgr_listener_class_init),
	(phonemgr_listener_emit_message), (phonemgr_listener_new),
	(phonemgr_listener_connect), (phonemgr_listener_battery_poll):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_connect),
	(phonemgr_utils_tell_driver), (phonemgr_utils_write_gnokii_config):
	* libgsm/phonemgr-utils.h:
	* src/main.c: (main): Add "-d/--debug" option, to allow enabling
	debugging gnokii

2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c:
	(phonemgr_listener_set_sms_notification):
	* libgsm/phonemgr-utils.c: (phonemgr_utils_get_channel),
	(phonemgr_utils_config_append_debug),
	(phonemgr_utils_driver_for_model),
	(phonemgr_utils_driver_for_device), (phonemgr_utils_guess_driver),
	(phonemgr_utils_tell_driver), (phonemgr_utils_write_gnokii_config):
	* libgsm/phonemgr-utils.h:
	* src/main.c: (main): Add --config flag to gnome-phone-manager
	to dump a gnokii configuration file, to the best of g-p-m's
	knowledge, useful for debugging

2007-10-21  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Add Sagem myX-7 to the list
	(Closes: #479563)

2007-10-21  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Add the Nokia 3110 to the list
	(Closes: #488836)

============ Version 0.20

2007-10-17  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.20, require bluez for the SDP search

2007-10-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (phonemgr_utils_write_config):
	Really use the right channel to connect to a phone, as gnokii
	uses rfcomm_channel, not channel in its config
	spotted by Malcolm Caldwell <malcolm.caldwell@cdu.edu.au>
	(Closes: #486331)

2007-10-03  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):